# Quick.Link

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: build_release.yml  release.yml
.obsidian/: workspace.json
src/: App.vue  index.css  main.ts  model.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/inno/: github.inno  github.iss  test.iss
src-tauri/src/: lib.rs  main.rs
src-tauri/src/script/: download.rs  frp.rs  mod.rs  tray.rs
src/components/: AppHeader.vue  AppSideBar.vue
src/components/action/: LabelManageAction.vue  NodeAction.vue  PluginAction.vue  TunnelAction.vue  TunnelAddAction.vue
src/components/action/tunnel/: TcpUdpTunnel.vue
src/components/context-menu/: NodeContextMenu.vue  TunnelContextMenu.vue
src/components/dialog/: EditTunnelDialog.vue  HTTPTunnelDialog.vue  TcpUdpTunnelDialog.vue
src/components/ui/: Loading.vue
src/components/ui/accordion/: AccordionContent.vue  AccordionItem.vue  AccordionTrigger.vue
src/components/ui/context-menu/: ContextMenu.vue  ContextMenuCheckboxItem.vue  ContextMenuContent.vue  ContextMenuGroup.vue  ContextMenuItem.vue  ContextMenuLabel.vue  ContextMenuPortal.vue  (+7 more)
src/lib/: eventBus.ts  store.ts  tray.ts
src/router/: router.ts  routes.ts
src/type/: label.ts  node.ts  plugin.ts  tunnel.ts
src/views/: download.vue  label-manage.vue  node.vue  plugin-install.vue  plugin-view.vue  plugin.vue  settings.vue  tunnel-add.vue  tunnel-view.vue  tunnel.vue
(+7 files in other folders)
